--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<div class="home">
+<div class="home title">
   {% if site.theme_settings.header_text %}
-  <div id="main" class="call-out"
+  <div id="main" class="call-out subtitle"
   style="background-image: url('{{ site.baseurl }}/{{ site.theme_settings.header_text_feature_image }}')">
     {{ site.theme_settings.header_text }}
   </div>
@@ -73,13 +73,12 @@ layout: default
 
   <div class="coolrow">
       <div class="coolrow-teaser">
-        <h1 class="title">J'ai des choses à dire</h1>
+        <h1 class="title">Babillages et autres joyeusetés</h1>
         <div class="bootstrap-iso">
           <div class="container">
             <div class="row">
               <div class="col text-center">
                 <a href="/blog/"><button type="button" class="btn btn-primary">Vers le blog</button></a>
-             
           </div>
           </div>
         </div>
