--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,13 +52,13 @@ layout: default
         <div class="bootstrap-iso">
           <div class="container">
             <div class="row">
-              <div class="col-4">
+              <div class="col-xl-4">
                 <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="antoinegouy">
                   <a class="LI-simple-link" href='https://fr.linkedin.com/in/antoinegouy?trk=profile-badge'> 
                     <img src='/assets/img/content/fakelinkedin.jpg' alt="Badge Linkedin d'Antoine Gouy"></img>
                 </a></div>
                 </div>
-            <div class="col-8">
+            <div class="col-xl-8">
               <h3>Ou la problématique de l'épicier.</h3>
               <p>Vouloir faire tout et n'importe quoi à tout prix.</br>
                 Insatiable curieux, je me résumerais par des verbes :</br>
