--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
           <div class="bootstrap-iso">
             <div class="container">
               <div class="row">
-                <div class="col-4">
+                <div class="col-sm-12 col-md-4">
                   <span class="icon-stack fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fas fa-object-group fa-stack-1x fa-inverse"></i>
@@ -24,7 +24,7 @@ layout: default
                   <h2 class="title">UI/UX Designer</h2>
                   <p>Je suis spécialisé dans la création et la mise en forme de vos IHMs en ayant une réfléxion centrée sur vos utilisateurs.</p>
                 </div>
-                <div class="col-4">
+                <div class="col-sm-12 col-md-4">
                   <span class="icon-stack fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fab fa-connectdevelop fa-stack-1x fa-inverse"></i>
@@ -32,7 +32,7 @@ layout: default
                   <h2 class="title">Facilitation</h2>
                   <p>Sensible aux nouvelles méthodes de gestion de groupe. J'anime, je libère et facilite vos équipes, vos formations, vos collaborateurs.</p>
                 </div>
-                <div class="col-4">
+                <div class="col-sm-12 col-md-4">
                   <span class="icon-stack fa-stack fa-lg center">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fas fa-hands-helping fa-stack-1x fa-inverse"></i>
@@ -50,23 +50,23 @@ layout: default
       <div class="coolrow-teaser">
         <h1 class="title">Multipotentiel ?</h1>
         <div class="bootstrap-iso">
-          <div class="container">
-            <div class="row">
-              <div class="col-xl-4">
-                <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="antoinegouy">
-                  <a class="LI-simple-link" href='https://fr.linkedin.com/in/antoinegouy?trk=profile-badge'> 
-                    <img src='/assets/img/content/fakelinkedin.jpg' alt="Badge Linkedin d'Antoine Gouy"></img>
+          <div class="container-fluid">
+
+              <div>
+                <div class="LI-profile-badge"  data-width="100%" data-version="v1" data-size="large"  data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="antoinegouy">
+                  <a class="LI-simple-link" href='https://fr.linkedin.com/in/antoinegouy?trk=profile-badge' > 
+                  <img src='/assets/img/content/fakelinkedin.jpg' alt="Badge Linkedin d'Antoine Gouy"></img>
                 </a></div>
-                </div>
-            <div class="col-xl-8">
+              </div>
+              <div>
               <h3>Ou la problématique de l'épicier.</h3>
               <p>Vouloir faire tout et n'importe quoi à tout prix.</br>
                 Insatiable curieux, je me résumerais par des verbes :</br>
                 Créer, faire, faire faire et apprendre à faire faire...</br> 
                 ...plutot que part un intutilé de poste.</br></br>
                 Pour le reste je vous invite à cliquer sur mon Linkedin !</p>
-            </div>
-          </div>
+            	</div>
+
         </div>
       </div>
 </div>
