Update website - Logo + home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,24 +50,25 @@ layout: default
       <div class="coolrow-teaser">
         <h1 class="title">Multipotentiel ?</h1>
         <div class="bootstrap-iso">
-          <div class="container-fluid">
-
-              <div>
-                <div class="LI-profile-badge"  data-width="100%" data-version="v1" data-size="large"  data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="antoinegouy">
-                  <a class="LI-simple-link" href='https://fr.linkedin.com/in/antoinegouy?trk=profile-badge' > 
-                  <img src='/assets/img/content/fakelinkedin.jpg' alt="Badge Linkedin d'Antoine Gouy"></img>
-                </a></div>
-              </div>
-              <div>
-              <h3>Ou la problématique de l'épicier.</h3>
-              <p>Vouloir faire tout et n'importe quoi à tout prix.</br>
-                Insatiable curieux, je me résumerais par des verbes :</br>
-                Créer, faire, faire faire et apprendre à faire faire...</br> 
-                ...plutot que part un intutilé de poste.</br></br>
-                Pour le reste je vous invite à cliquer sur mon Linkedin !</p>
-            	</div>
-
-        </div>
+          <div class="container">
+            <div class="row">
+				<div class="col-sm">
+					<div class="LI-profile-badge"  data-width="100%" data-version="v1" data-size="large"  data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="antoinegouy">
+						<a class="LI-simple-link" href='https://fr.linkedin.com/in/antoinegouy?trk=profile-badge' > 
+						<img src='/assets/img/content/fakelinkedin.jpg' alt="Badge Linkedin d'Antoine Gouy"></img>
+					</a></div>
+				</div>
+				<div class="col-sm">
+					<h3>Ou la problématique de l'épicier.</h3>
+					<p>Vouloir faire tout et n'importe quoi à tout prix.</br>
+					Insatiable curieux, je me résumerais par des verbes :</br>
+					Créer, faire, faire faire et apprendre à faire faire...</br> 
+					...plutot que part un intutilé de poste.</br></br>
+					Pour le reste je vous invite à cliquer sur mon Linkedin !</p>
+				</div>
+			</div>
+          </div>
+		</div>
       </div>
 </div>
 
