--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -1,6 +1,7 @@
 // Header text feature
 .call-out {
     @extend %padding-medium;
+	margin-top: 85px;
     display: inline-block;
     width: 100%;
     height: 100%;
