--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,7 @@
 // Typography
 $font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-headings: 'whateverittakes', 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-bigtitle: 'Stella','Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
 
