--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -1,10 +1,11 @@
 .site-header {
     //padding-bottom: 1%;
-    padding: 2% 2% 1% 2%;
+    padding: 2% 1% 1% 1%;
     background: $brand-color;
     display: inline-block;
     float: left;
     width: 100%;
+	z-index: 2;
 
     .separator {
         user-select: none;
@@ -33,8 +34,9 @@
     .site-title {
         float: left;
         font-weight: bold;
-        font-size: 1em;
-        line-height: 1.5;
+        font-size: 1.5em;
+        line-height: 1;
+		font-family: $font-family-bigtitle;
     }
 
     nav {
